[package]
name = "ntex-basicauth"
version = "0.2.0"
edition = "2024"
authors = ["lollipopkit <a@lpkt.cn>"]
description = "A secure Basic Authentication middleware for ntex web framework."
license = "MIT"
repository = "https://github.com/lollipopkit/ntex-basicauth"
readme = "README.md"
keywords = ["ntex", "basic-auth", "middleware", "authentication", "security"]
categories = ["web-programming", "authentication"]

[features]
default = ["json", "cache", "regex", "timing-safe", "tokio"]
json = ["dep:serde", "dep:serde_json"]
bcrypt = ["dep:bcrypt"]
cache = [
    "dep:sha2",
    "dep:dashmap",
] # Cache support requires sha2 for secure hashing
regex = ["dep:regex"] # Path filtering requires regex
timing-safe = [] # Timing-safe password comparison

[dependencies]
base64 = "0.22"
dashmap = { version = "6", optional = true }
ntex = "2"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
bcrypt = { version = "0.15", optional = true }
thiserror = "1.0"
sha2 = { version = "0.10", optional = true }
regex = { version = "1.0", optional = true }
tokio = { version = "1.0", features = [
    "time",
], optional = true } # TTL support requires tokio for async operations

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros"] }
