[package]
name = "ntex-basicauth"
version = "0.3.1"
edition = "2024"
authors = ["lollipopkit <a@lpkt.cn>"]
description = "A Basic Authentication middleware for ntex web framework."
license = "MIT"
repository = "https://github.com/lollipopkit/ntex-basicauth"
readme = "README.md"
keywords = ["ntex", "basic-auth", "middleware", "authentication", "security"]
categories = ["web-programming", "authentication"]

[features]
default = ["json", "cache", "regex", "timing-safe", "bcrypt", "secure-memory"]
json = ["dep:serde", "dep:serde_json"]
bcrypt = ["dep:bcrypt"]
cache = ["dep:sha2", "dep:dashmap"]
regex = ["dep:regex"]
timing-safe = ["dep:subtle"]
secure-memory = ["dep:zeroize"]

[dependencies]
base64 = "0"
dashmap = { version = "6", optional = true }
ntex = "2"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
bcrypt = { version = "0", optional = true }
thiserror = "1"
sha2 = { version = "0", optional = true }
regex = { version = "1", optional = true }
subtle = { version = "2", optional = true } # For timing-safe comparisons
zeroize = { version = "1", features = [
    "zeroize_derive",
], optional = true } # For secure memory cleanup

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros", "rt"] }
ntex = { version = "2", features = ["tokio"] }
tempfile = "3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
